--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     </ul>
                 </nav>
                 <a href="" class="header__cart cart-header">
-                    <div class="cart-header__text">Cart</div>
-                    <div class="cart-header__quantity">0</div>
+                    <span class="cart-header__text">Cart</span>
+                    <span class="cart-header__quantity">0</span>
                 </a>
                 <a href="" class="header__button button">Get started</a>
             </div>
         </header>
-        <main class="page">main</main>
+        <main class="page"></main>
         <footer class="footer">footer</footer>
     </div>
     <script src="js/script.js"></script>
