--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <nav class="header__menu menu">
-                    <button class=" menu__icon icon-menu" type="button"></button>
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a href="" class="menu__link">Home</a>
@@ -41,6 +40,9 @@
                     <span class="cart-header__quantity">0</span>
                 </a>
                 <a href="" class="header__button button">Get started</a>
+                <div class="icon-menu" type="button">
+                    <span></span>
+                </div>
             </div>
         </header>
         <main class="page"></main>
