--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
                     <img src="img/logo.svg" alt="logo">
                 </a>
                 <nav class="header__menu menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Home</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">About</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Pages</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Services</a>
-                        </li>
-                    </ul>
+                    <div class="menu__body">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Home</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">About</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Pages</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Services</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
                 <a href="" class="header__cart cart-header">
                     <span class="cart-header__text">Cart</span>
